RESOLVED FIXED47282
[CHROMIUM] Crash on failed shader compilation.
https://bugs.webkit.org/show_bug.cgi?id=47282
Summary [CHROMIUM] Crash on failed shader compilation.
Stephen White
Reported 2010-10-06 11:06:11 PDT
[CHR[CHROMIUM] Crash on failed shader compilation.
Attachments
Patch (3.07 KB, patch)
2010-10-06 11:10 PDT, Stephen White
jamesr: review+
Stephen White
Comment 1 2010-10-06 11:07:59 PDT
When compilation of the canvas2D vertex or fragment shaders fails, we should not crash the renderer. I noticed this when using --enable-accelerated-2d-canvas with --in-process-webgl. While this is an unusual combination, it's probably a good idea to make this robust anyway.
Stephen White
Comment 2 2010-10-06 11:10:34 PDT
James Robinson
Comment 3 2010-10-06 11:13:17 PDT
Comment on attachment 69962 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=69962&action=review Good catch. > WebCore/platform/graphics/gpu/SharedGraphicsContext3D.h:122 > + SharedGraphicsContext3D(PassOwnPtr<GraphicsContext3D> context, PassOwnPtr<SolidFillShader> solidFillShader, PassOwnPtr<TexShader> texShader); nit: don't need to name the params here
Stephen White
Comment 4 2010-10-06 11:23:00 PDT
Note You need to log in before you can comment on or make changes to this bug.