WebCore/platform/graphics/gpu/SharedGraphicsContext3D.h
@@ -119,7 +119,7 @@ public:
     PassRefPtr<Texture> createTexture(Texture::Format, int width, int height);
 
 private:
-    explicit SharedGraphicsContext3D(PassOwnPtr<GraphicsContext3D> context);
+    SharedGraphicsContext3D(PassOwnPtr<GraphicsContext3D>, PassOwnPtr<SolidFillShader>, PassOwnPtr<TexShader>);
 
     // Used to implement removeTexturesFor(), see the comment above.
     static HashSet<SharedGraphicsContext3D*>* allContexts();
